--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">3DTetris</string>
     <string name="start">start</string>
+    <string name="play">PLAY</string>
+    <string name="rank_list">Rank List</string>
+    <string name="settings">Settings</string>
 </resources>
