--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="play">PLAY</string>
     <string name="rank_list">Rank List</string>
     <string name="settings">Settings</string>
+    <string name="game_over">Game Over</string>
+    <string name="restart">Restart</string>
+    <string name="exit">Exit</string>
+    <string name="game_over_message">You can restart or exit the game</string>
+    <string name="pause">Pause</string>
+    <string name="continue_">Continue</string>
 </resources>
